--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
     "next": "14.0.0",
