--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
+    "@types/react-slick": "^0.23.13",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
