--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "lottie-react": "^2.4.1",
     "next": "14.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
