--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
-    "next": "14.0.0",
+    "next": "^15.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.31.0",
