--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "next": "^15.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "swiper": "^12.0.2",
     "react-slick": "^0.31.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
