--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
+    "@types/cheerio": "^0.22.35",
     "@types/react-slick": "^0.23.13",
+    "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
     "lottie-react": "^2.4.1",
