--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
     "@types/cheerio": "^0.22.35",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
     "@types/react-slick": "^0.23.13",
     "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lottie-react": "^2.4.1",
     "next": "^15.5.4",
     "react": "^18.2.0",
