--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-slick": "^0.31.0",
+    "resend": "^6.4.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^12.0.3"
   },
