--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rimraf .next"
   },
   "dependencies": {
     "@emotion/cache": "^11.14.0",
@@ -42,6 +43,7 @@
     "eslint": "^8.0.0",
     "eslint-config-next": "14.0.0",
     "postcss": "^8.0.0",
+    "rimraf": "^6.1.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.0.0"
   }
