--- a/package.json
+++ b/package.json
@@ -9,44 +9,43 @@
     "lint": "next lint",
     "clean": "rimraf .next"
   },
-"dependencies": {
-  "@emotion/cache": "^11.14.0",
-  "@emotion/react": "^11.14.0",
-  "@emotion/styled": "^11.14.1",
-  "@mui/icons-material": "^7.3.2",
-  "@mui/material": "^7.3.2",
-  "@mui/material-nextjs": "^7.3.2",
-  "@types/cheerio": "^0.22.35",
-  "@types/html2canvas": "^0.5.35",
-  "@types/jspdf": "^1.3.3",
-  "@types/react-slick": "^0.23.13",
-  "cheerio": "^1.1.2",
-  "date-fns": "^4.1.0",
-  "framer-motion": "^12.23.13",
-  "html2canvas": "^1.4.1",
-  "jspdf": "^3.0.3",
-  "lottie-react": "^2.4.1",
-
-  "next": "15.1.9",
-  "react": "18.3.1",
-  "react-dom": "18.3.1",
-
-  "react-slick": "^0.31.0",
-  "resend": "^6.4.2",
-  "slick-carousel": "^1.8.1",
-  "swiper": "^12.0.3"
-},
-"devDependencies": {
-  "@tailwindcss/typography": "^0.5.19",
-  "@types/node": "^20.0.0",
-  "@types/react": "^18.3.0",
-  "@types/react-dom": "^18.3.0",
-  "autoprefixer": "^10.0.1",
-  "eslint": "^8.0.0",
-  "eslint-config-next": "15.1.9",
-  "postcss": "^8.0.0",
-  "rimraf": "^6.1.2",
-  "tailwindcss": "^3.3.0",
-  "typescript": "^5.0.0"
+  "dependencies": {
+    "@emotion/cache": "^11.14.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/material-nextjs": "^7.3.2",
+    "@types/cheerio": "^0.22.35",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
+    "@types/react-slick": "^0.23.13",
+    "cheerio": "^1.1.2",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.13",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
+    "lottie-react": "^2.4.1",
+    "next": "15.1.9",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-google-recaptcha-v3": "^1.11.0",
+    "react-slick": "^0.31.0",
+    "resend": "^6.4.2",
+    "slick-carousel": "^1.8.1",
+    "swiper": "^12.0.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.19",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "15.1.9",
+    "postcss": "^8.0.0",
+    "rimraf": "^6.1.2",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.0.0"
   }
 }
