Actualizaciones de componentes y reemplazos de assets

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # WordPress API Configuration
 WORDPRESS_API_URL=https://endpoint.playfulagency.com/wp-json
 
-# Google reCAPTCHA v3
-NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LdvUTssAAAAAPhfMupP02ukQ9VUeXZJ6NzHd8Sh
-RECAPTCHA_SECRET_KEY=6LdvUTssAAAAAK1okApfME3IhkUic6rq5QmfcyMk
+# Google reCAPTCHA v2 (Checkbox)
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcnUEEsAAAAAOLcd5LpT1w7VVUc-kaWtbSmohNC
+RECAPTCHA_SECRET_KEY=6LcnUEEsAAAAAJ2t03xOZO2nVzADcMnGatX6hhQQ
