--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cheerio": "^0.22.35",
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/react-slick": "^0.23.13",
     "cheerio": "^1.1.2",
     "date-fns": "^4.1.0",
@@ -29,6 +30,7 @@
     "next": "15.1.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-slick": "^0.31.0",
     "resend": "^6.4.2",
