Se agrego el GTM

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,6 @@ WORDPRESS_API_URL=https://endpoint.playfulagency.com/wp-json
 # Google reCAPTCHA v2 (Checkbox)
 NEXT_PUBLIC_RECAPTCHA_SITE_KEY=6LcnUEEsAAAAAOLcd5LpT1w7VVUc-kaWtbSmohNC
 RECAPTCHA_SECRET_KEY=6LcnUEEsAAAAAJ2t03xOZO2nVzADcMnGatX6hhQQ
+
+# Google Tag Manager
+NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
