--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
+    "@next/third-parties": "^16.1.1",
     "@types/cheerio": "^0.22.35",
     "@types/html2canvas": "^0.5.35",
     "@types/jspdf": "^1.3.3",
