Se agrego el GA4

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ RECAPTCHA_SECRET_KEY=6LcnUEEsAAAAAJ2t03xOZO2nVzADcMnGatX6hhQQ
 
 # Google Tag Manager
 NEXT_PUBLIC_GTM_ID=GTM-XXXXXXX
+
+# Google Analytics 4
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
